premiere ebauche d'essai

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     Hello WORLD
+
+    <h1>Stéphanie - Chargée de Projet Digital Junior</h1>
+    <img src="img/photo cv.jpg" alt="Photo de profil">
 </body>
 <footer>
 
