--- a/index.html
+++ b/index.html
@@ -5,15 +5,99 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- lien vers css -->
+    <link rel="stylesheet" href="CSS/style.css"/>
+    <!-- titre -->
+    <title>Stéphanie Michaud</title>
 </head>
-<body>
-    Hello WORLD
 
-    <h1>Stéphanie - Chargée de Projet Digital Junior</h1>
-    <img src="img/photo cv.jpg" alt="Photo de profil">
+<body>
+    <!-- En-tête -->
+    <h1 class="entete">Stéphanie Michaud</h1>
+    <h3 class="entete">Chargée de Projet Digital - Junior</h3>
+
+    <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
+<br>
+<br>
+<!-- accès rapide x4 nav? -->
+
+<!-- bouton portfolio -->
+<a href="/blogfolio/blogfolio.html">Portfolio</a>
+<!-- bouton télécharger CV -->
+<button href="#">Téléchargez mon CV</button>
+<!-- bouton contact -->
+<a href="/contact/contact.html">Contactez moi</a>
+<!-- Picto LinkedIn -->
+
+<!-- SECTIONS -->
+<section class="xppro"></section>
+<!-- section 1 compétences -->
+
+<!-- skills -->
+<div>
+    <h2 class="">Soft Skills</h2>
+    <ul>
+        <p>
+
+        </p>
+    </ul>
+    <h2 class="">Hard Skills</h2>
+    <ul>
+        <p>
+            
+        </p>
+    </ul>
+</div>
+
+<!-- formations-->
+<div>
+    <h2 class="">Formations</h2>
+                <!-- on crée un lien vers un site externe -->
+        <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
+      <a href="" target="_blank">Nom</a> 
+
+    <h2 class="">Stage</h2>
+      <a href="" target="_blank">Nom</a> 
+</div>
+
+<!-- Loisirs-->
+<div>
+    <h2 class="">Intérêts</h2>
+    <p></p>
+</div>
+
+<!-- section 2 portfolio -->
+    <section class="portfolio">
+        <!-- 1-->
+        <div></div>
+
+        <!-- 2-->
+        <div></div>
+
+        <!-- 3-->
+        <div></div>
+        
+        <!-- 4-->
+        <div></div>
+
+        <!-- bouton lien page blogfolio-->
+        <a href="/blogfolio/blogfolio.html">Découvrez mes créations</a>
+    </section>
 </body>
+
 <footer>
+    <div class="basdepage">
+        <p>Je suis disponible de suite, contactez moi !</p>
+        <h2 class="coordonnees">Coordonnées</h2>
+        <address>
+            <!-- lien vers notre courriel -->
+            <a href="mailto:stephaniemichaud85@gmail.com">stephaniemichaud85@gmail.com</a>
+            <br>
+            <!-- lien pour le téléphone -->
+            <a href="tel:+33660934478">+33(0)6.60.93.44.78</a>
+        </address>
+    </div>
 
 </footer>
+
 </html>
