--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
             <div class="skills">
                 <h2>Soft Skills</h2>
                 <ul>
-                    <p>
-
-                    </p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
                 </ul>
                 <h2>Hard Skills</h2>
                 <ul>
-                    <p>
-                        
-                    </p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
+                    <p>BLA 1</p>
                 </ul>
             </div>
 
@@ -60,16 +62,21 @@
                 <h2>Formations</h2>
                             <!-- on crée un lien vers un site externe -->
                     <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
-                <a href="" target="_blank">Nom</a> 
+                <a href="https://www.wf3.fr/" target="_blank">Webforce3</a> 
                 <p> <!-- On peut mettre en valeur le texte grâce des balises simples -->
-                    <i>Septembre 2022</i>, Formation <b>Chargée de Projet Digital</b> en
+                    <i>Mars 2022</i>, <strong>I like cats because they are fat and fluffy. </strong><span class="boldred"> a voir</span>.
+                </p>
+                <br>
+                <a href="https://www.wf3.fr/" target="_blank">Webforce3</a> 
+                <p> <!-- On peut mettre en valeur le texte grâce des balises simples -->
+                    <i>Mars 2022</i>, Formation <b>Chargée de Projet Digital</b> en
                     distanciel avec l'école <u>Webforce 3</u>, que je
                     <span class="boldred">ne recommande pas</span> pour son
                     <mark>manque certain</mark> de communication <strong>et d'organisation</strong>.
                 </p>
 
                 <h2>Stage</h2>
-                    <ul>
+                    <ul class="liste">
                         <li>
                             <a href="https://romaneche-thorins.fr/fr/" target="_blank">Mairie de Romanèche-Thorins</a>
                             <p>I love cuddles rub against owner because nose is wet yet spill litter box, scratch at owner, destroy all furniture, especially couch and scratch. Human is washing you why halp oh the horror flee scratch hiss bite.</p> 
@@ -84,27 +91,46 @@
             <!-- Loisirs-->
             <div class="loisirs">
                 <h2>Intérêts</h2>
-                <p></p>
+                <p>Mettre des Glyph</p>
+            </div>
+            <!-- Contact-->
+            <div class="contact">
+                <h2>Contact</h2>
+                <address>
+                    <!-- lien vers notre courriel -->
+                    <a href="mailto:stephaniemichaud85@gmail.com">stephaniemichaud85@gmail.com</a>
+                    <br>
+                        <!-- lien pour le téléphone -->
+                    <a href="tel:+33660934478">+33(0)6.60.93.44.78</a>
+                    <p>LOCALISATION</p>
+                </address>
             </div>
         </section>
 
     <!-- section 2 portfolio -->
         <section class="portfolio">
             <h2>Portfolio</h2>
-            <!-- 1-->
+            <!-- 1 mockup -->
             <div>
-            <img src="/ressources/images/stellers-sea-eagle-gff32eb085_1920.jpg" width="240px"/>
-            <p></p>
+                <img src="/ressources/images/stellers-sea-eagle-gff32eb085_1920.jpg" width="200px"/>
+                <p>Whatever scratch for poop on couch meowzer.</p>
             </div>
-            <!-- 2-->
-            <div></div>
-            <p></p>
-            <!-- 3-->
-            <div></div>
-            <p>Crash against wall but walk away like nothing happened i vomit in the bed in the middle of the night or unwrap toilet paper for lick face hiss at owner, pee a lot, and meow repeatedly scratch at fence purrrrrr eat muffins and poutine until owner comes back and poop on grasses.</p>
-            <!-- 4-->
-            <div></div>
-            <p></p>
+            <!-- image-->
+            <div>
+                <img src="/ressources/images/heart-g3b97e0e26_1920.jpg" width="200
+            px"/>
+                <p>Caticus cuteicus bawl under human beds and ask for petting see brother cat receive pets, attack out of jealousy</p>
+            </div>
+            <!-- 3 vidéo-->
+            <div>
+                 <p>Crash against wall but walk away like nothing happened i vomit in the bed in the middle of the night.</p>
+            </div>
+            <!-- 4 image-->
+            <div>
+                <img src="/ressources/images/pendulum-g77c3441b4_1920.jpg" width="200
+            px"/>
+                <p>Bite nose of your human i am the best.</p>
+            </div>
 
             <!-- bouton lien page blogfolio-->
             <a href="/blogfolio/blogfolio.html">Découvrez mes créations</a>
@@ -113,17 +139,10 @@
     </main>
     <footer>
         <div class="basdepage">
-                <p>Je suis disponible de suite, contactez moi !</p>
-                <h2 class="coordonnees">Coordonnées</h2>
-            <address>
-                    <!-- lien vers notre courriel -->
-                <a href="mailto:stephaniemichaud85@gmail.com">stephaniemichaud85@gmail.com</a>
-                <br>
-                    <!-- lien pour le téléphone -->
-                <a href="tel:+33660934478">+33(0)6.60.93.44.78</a>
-            </address>
+                <h2>Bla bla bla</h2>
+                <p>Bla bla bla</p>
+            
         </div>
-
     </footer>
 </body>
 </html>
