--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- lien vers css -->
     <link rel="stylesheet" href="CSS/style.css"/>
+    <!-- BOOTSTRAP + js -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- Polices en CDN font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- titre -->
     <title>Stéphanie Michaud</title>
 </head>
 
 <body>
     <!-- En-tête -->
-    <header>
-        <h1 class="entete">Stéphanie Michaud</h1>
-        <h3 class="entete">Chargée de Projet Digital - Junior</h3>
+    <header class="entete">
+        <h1>Stéphanie Michaud</h1>
+        <h3>Chargée de Projet Digital - Junior</h3>
 
-        <img class="profilepic" src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
+        <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
         <br>
         <div>
-        <h2 class="">Sommaire</h2>
+        <h2>Sommaire</h2>
         <p>Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
         </div>
         <br>
         <!-- accès rapide x4 nav? -->
-        <!-- bouton portfolio -->
-        <a href="/blogfolio/blogfolio.html">Portfolio</a>
-        <!-- bouton télécharger CV -->
-        <button href="#">Téléchargez mon CV</button>
-        <!-- bouton contact -->
-        <a href="/contact/contact.html">Contactez moi</a>
-        <!-- Picto LinkedIn -->
-        <a href="#">In</a>
+        <nav class="navbar">
+            <!-- bouton portfolio -->
+            <a href="/blogfolio/blogfolio.html">Portfolio</a>
+            <!-- bouton télécharger CV -->
+            <button href="#">Téléchargez mon CV</button>
+            <!-- bouton contact -->
+            <a href="/contact/contact.html">Contactez moi</a>
+            <!-- Picto LinkedIn -->
+            <a href="#">In</a>
+        </nav>
     </header>
 
 <!-- SECTIONS -->
     <main>
         <!-- section 1 compétences -->
-        <section class="competences">
+        <section aria-labelledby="competences">
             <!-- skills -->
-            <div class="skills">
+            <div id="competences">
                 <h2>Soft Skills</h2>
                 <ul>
                     <p>BLA 1</p>
@@ -58,8 +65,8 @@
             </div>
 
             <!-- formations-->
-            <div class="formations">
-                <h2>Formations</h2>
+            <div aria-labelledby="formations">
+                <h2 id="formations">Formations</h2>
                             <!-- on crée un lien vers un site externe -->
                     <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
                 <a href="https://www.wf3.fr/" target="_blank">Webforce3</a> 
@@ -75,7 +82,7 @@
                     <mark>manque certain</mark> de communication <strong>et d'organisation</strong>.
                 </p>
 
-                <h2>Stage</h2>
+                <h2 id="stages">Stage</h2>
                     <ul class="liste">
                         <li>
                             <a href="https://romaneche-thorins.fr/fr/" target="_blank">Mairie de Romanèche-Thorins</a>
@@ -102,7 +109,8 @@
                     <br>
                         <!-- lien pour le téléphone -->
                     <a href="tel:+33660934478">+33(0)6.60.93.44.78</a>
-                    <p>LOCALISATION</p>
+                    <br>
+                    <i class="fa-solid fa-location-dot"></i><span> Localisation</span>
                 </address>
             </div>
         </section>
@@ -141,6 +149,7 @@
         <div class="basdepage">
                 <h2>Bla bla bla</h2>
                 <p>Bla bla bla</p>
+                <p>Mentions légales, droits, plan du site</p>
             
         </div>
     </footer>
