--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
             <!-- Loisirs-->
             <div class="loisirs">
                 <h2>Intérêts</h2>
-                <p>Mettre des Glyph</p>
+                <i class="fa-solid fa-cat"></i>
+                <i class="fa-solid fa-feather-pointed"></i>
+                <i class="fa-sharp fa-solid fa-mobile-screen"></i>
             </div>
             <!-- Contact-->
             <div class="contact">
@@ -150,6 +152,7 @@
                 <h2>Bla bla bla</h2>
                 <p>Bla bla bla</p>
                 <p>Mentions légales, droits, plan du site</p>
+                <i class="fa-sharp fa-solid fa-copyright"></i>
             
         </div>
     </footer>
