--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <br>
         <!-- accès rapide x4 nav? -->
-        <nav class="navbar">
+        <nav>
             <!-- bouton portfolio -->
             <a href="/blogfolio/blogfolio.html">Portfolio</a>
             <!-- bouton télécharger CV -->
