tentatives de flex

--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -46,7 +46,10 @@
     <div class="separation"></div>
     <h2>Alignement axe secondaire</h2>
     <Section class="container flex">
-
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </Section>
 </body>
 </html>
