--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- lien vers css -->
     <link rel="stylesheet" href="CSS/style.css"/>
+    <!-- Google font -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap');
+    </style>
     <!-- BOOTSTRAP + js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <!-- Polices en CDN font awesome -->
+    <!-- icones en CDN font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- titre -->
     <title>Stéphanie Michaud</title>
@@ -24,8 +28,9 @@
 
         <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
         <br>
-        <div>
         <h2>Sommaire</h2>
+        <div class="flex sommaire">
+        
         <p>Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
         </div>
         <br>
@@ -45,9 +50,9 @@
 <!-- SECTIONS -->
     <main>
         <!-- section 1 compétences -->
-        <section aria-labelledby="competences">
+        <section class="container skills" aria-labelledby="competences">
             <!-- skills -->
-            <div id="competences">
+            <div>
                 <h2>Soft Skills</h2>
                 <ul>
                     <p>BLA 1</p>
@@ -63,10 +68,13 @@
                     <p>BLA 1</p>
                 </ul>
             </div>
+        </section>
 
+        <!-- section 2 formastage -->
+        <section class="container formastage" aria-labelledby="competences">
             <!-- formations-->
             <div aria-labelledby="formations">
-                <h2 id="formations">Formations</h2>
+                <h2>Formations</h2>
                             <!-- on crée un lien vers un site externe -->
                     <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
                 <a href="https://www.wf3.fr/" target="_blank">Webforce3</a> 
@@ -82,7 +90,7 @@
                     <mark>manque certain</mark> de communication <strong>et d'organisation</strong>.
                 </p>
 
-                <h2 id="stages">Stage</h2>
+                <h2>Stage</h2>
                     <ul class="liste">
                         <li>
                             <a href="https://romaneche-thorins.fr/fr/" target="_blank">Mairie de Romanèche-Thorins</a>
@@ -94,16 +102,12 @@
                         </li>
                     </ul>
             </div>
-
-            <!-- Loisirs-->
-            <div class="loisirs">
-                <h2>Intérêts</h2>
-                <i class="fa-solid fa-cat"></i>
-                <i class="fa-solid fa-feather-pointed"></i>
-                <i class="fa-sharp fa-solid fa-mobile-screen"></i>
-            </div>
+        </section>
+        <div class="separation"></div>
+        <!-- section 3 interetcontact -->
+        <section class="row2 contain" aria-labelledby="competences">
             <!-- Contact-->
-            <div class="contact">
+            <div>
                 <h2>Contact</h2>
                 <address>
                     <!-- lien vers notre courriel -->
@@ -115,6 +119,13 @@
                     <i class="fa-solid fa-location-dot"></i><span> Localisation</span>
                 </address>
             </div>
+            <!-- Loisirs-->
+            <div>
+                <h2>Intérêts</h2>
+                <i class="fa-solid fa-cat"></i>
+                <i class="fa-solid fa-feather-pointed"></i>
+                <i class="fa-sharp fa-solid fa-mobile-screen"></i>
+            </div> 
         </section>
 
     <!-- section 2 portfolio -->
