--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
         <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
         <br>
         <h2>Sommaire</h2>
-        <div class="flex sommaire">
+        <p class="sommaire">Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
         
-        <p>Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
-        </div>
         <br>
         <!-- accès rapide x4 nav? -->
-        <nav>
+        <nav class="flex between">
             <!-- bouton portfolio -->
             <a href="/blogfolio/blogfolio.html">Portfolio</a>
             <!-- bouton télécharger CV -->
@@ -49,10 +47,10 @@
 
 <!-- SECTIONS -->
     <main>
-        <!-- section 1 compétences -->
-        <section class="container skills" aria-labelledby="competences">
+        <!-- section skills et compétences -->
+        <section class="flex container" >
             <!-- skills -->
-            <div>
+            <div aria-labelledby="competences">
                 <h2>Soft Skills</h2>
                 <ul>
                     <p>BLA 1</p>
@@ -68,12 +66,9 @@
                     <p>BLA 1</p>
                 </ul>
             </div>
-        </section>
-
-        <!-- section 2 formastage -->
-        <section class="container formastage" aria-labelledby="competences">
+            <div class="separation1"></div>
             <!-- formations-->
-            <div aria-labelledby="formations">
+            <div aria-labelledby="formations" >
                 <h2>Formations</h2>
                             <!-- on crée un lien vers un site externe -->
                     <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
