--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- -->
+<!-- Mon CV Site-->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -16,24 +16,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <!-- icones en CDN font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <!-- lien vers css -->
+    <link rel="stylesheet" href="CSS/style.css"/>
     <!-- titre -->
     <title>Stéphanie Michaud</title>
 </head>
 
 <body>
     <!-- En-tête -->
-    <header class="entete">
-        <h1>Stéphanie Michaud</h1>
-        <h3>Chargée de Projet Digital - Junior</h3>
-
-        <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
-        <br>
-        <h2>Sommaire</h2>
-        <p class="sommaire">Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
+    <header>
+        <div class="flex entete">
+            <img src="ressources/images/cat-gd442940b2_1920.jpg" alt="Photo de profil de Stéphanie Michaud" width="240px"/>
+            <div class="noms">
+            <p class="monNom">Stéphanie Michaud</p>
+            <h1>Chargée de Projet Digital</h1>
+            </div>
+        </div>
+            <br>
+            <h2>Sommaire</h2>
+            <p class="sommaire">Indépendante, imaginative et sans limites, toujours à la recherche de la magie et du sens du quotidien, je peux faire preuve d'un enthousiasme contagieux. J'utilise mes compétences en communication pour gérer les situations de travail les plus difficiles avec gentillesse et équité.</p>
         
         <br>
         <!-- accès rapide x4 nav? -->
-        <nav class="flex between">
+        <nav class="flex around">
             <!-- bouton portfolio -->
             <a href="/blogfolio/blogfolio.html">Portfolio</a>
             <!-- bouton télécharger CV -->
@@ -48,9 +53,9 @@
 <!-- SECTIONS -->
     <main>
         <!-- section skills et compétences -->
-        <section class="flex container" >
+        <section id="container" class="flex container" >
             <!-- skills -->
-            <div aria-labelledby="competences">
+            <div id="competences" aria-labelledby="competences">
                 <h2>Soft Skills</h2>
                 <ul>
                     <p>BLA 1</p>
@@ -68,7 +73,7 @@
             </div>
             <div class="separation1"></div>
             <!-- formations-->
-            <div aria-labelledby="formations" >
+            <div id="formastage" aria-labelledby="formations" >
                 <h2>Formations</h2>
                             <!-- on crée un lien vers un site externe -->
                     <!-- l'attribut target avec la valeur _blank nous permet d'ouvrir un nouvel onglet -->
@@ -100,9 +105,9 @@
         </section>
         <div class="separation"></div>
         <!-- section 3 interetcontact -->
-        <section class="row2 contain" aria-labelledby="competences">
+        <section class="flex contain">
             <!-- Contact-->
-            <div>
+            <div id="contact" aria-labelledby="competences">
                 <h2>Contact</h2>
                 <address>
                     <!-- lien vers notre courriel -->
@@ -115,7 +120,7 @@
                 </address>
             </div>
             <!-- Loisirs-->
-            <div>
+            <div id="loisirs" aria-labelledby="loisirs">
                 <h2>Intérêts</h2>
                 <i class="fa-solid fa-cat"></i>
                 <i class="fa-solid fa-feather-pointed"></i>
