--- a/cours/bootstrap/index.html
+++ b/cours/bootstrap/index.html
@@ -62,16 +62,13 @@
                 <li class="nav-item" role="presentation">
                   <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Galerie</button>
                 </li>
-              </ul>
-              <div class="tab-content" id="myTabContent">
+            </ul>
+            <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt perferendis repellat nulla consectetur unde alias consequuntur, culpa quae earum omnis veritatis iste sit ut neque pariatur molestias iusto blanditiis. Consequatur sapiente molestiae sed necessitatibus, cupiditate nam! Iure, modi delectus! Veritatis, dolorum quaerat quisquam cupiditate nobis aperiam eaque distinctio culpa.</div>
                 <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
                 <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur tempore qui veniam mollitia perspiciatis quis quia facilis exercitationem blanditiis quos!</div>
                 <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos hic mollitia, soluta asperiores molestiae velit nisi facere consequatur ut, doloremque quibusdam? Dolor doloribus laborum provident, quis necessitatibus iusto? Similique quae commodi itaque mollitia, voluptas quis numquam esse culpa? Exercitationem laudantium officiis numquam error molestias? Saepe culpa et reprehenderit velit iusto neque ducimus aspernatur repellendus qui fugiat! Iusto, quisquam eveniet maiores quis aliquid doloremque sit obcaecati distinctio odit. Molestias nisi dignissimos iusto quas facere iste, officia, ea quos tenetur provident velit quod explicabo laboriosam nobis obcaecati similique accusantium quia minus rerum adipisci placeat. Fugit repellendus facere nobis eos nostrum, dolores deserunt?</div>
-              </div>
-
-              
-
+            </div>
           </section>
           <section>
             <div class="accordion" id="accordionExample">
@@ -124,6 +121,50 @@
                     </div>
                   </div>
               </div>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+              </div>
+          </section>
+          <section id="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://source.unsplash.com/random/?id=1" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://source.unsplash.com/random/?id=2" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://source.unsplash.com/random/?id=3" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
           </section>
         </main>
         
