--- a/cours/JavaScript/JavaScriptEvent/index.html
+++ b/cours/JavaScript/JavaScriptEvent/index.html
@@ -8,23 +8,43 @@
     <title>JavaScript Events</title>
 </head>
 <body>
-    <div>
+    <div id="page">
         <header>
+            <h1><img class="logo" src="/cours/JavaScript/img/logo.png" alt=""></h1>
             <nav>
+                <button><img class="buttonBurger" src="/cours/JavaScript/img/hamburger-off.png"></button>
                 <ul>
-                    <li>
-                        <a href="#">Menu 1</a>
-                        <a href="#">Menu 2</a>
-                        <a href="#">Menu 3</a>
-                        <a href="#">Menu 4</a>
-                    </li>
+                    <li><a href="#">Menu 1</a></li>
+                    <li><a href="#">Menu 2</a></li>
+                    <li><a href="#">Menu 3</a></li>
+                    <li><a href="#">Menu 4</a></li>
+                </ul>
+            </nav>
+            <nav id="version2">
+                <button><img class="buttonBurgerimg" src="/cours/JavaScript/img/hamburger-off.png"></button>
+                <ul>
+                    <li><a href="#">Menu 5</a></li>
+                    <li><a href="#">Menu 6</a></li>
+                    <li><a href="#">Menu 7</a></li>
+                    <li><a href="#">Menu 8</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section>
-                <h1>Titre de ma page</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde voluptates placeat laborum, tempora quos similique fuga aliquid ea rerum aperiam? Incidunt magnam maxime quisquam repudiandae accusamus animi minus eum. Nemo!</p>
+                <h2>Titre de ma page</h2>
+                <a class="see-more">Voir plus</a>
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde voluptates placeat laborum, tempora quos similique fuga aliquid ea rerum aperiam? Incidunt magnam maxime quisquam repudiandae accusamus animi minus eum. Nemo!</p>
+            </section>
+                <br>
+            <section>
+                <a class="see-more2">Voir plus</a>
+                <p class="paragraph2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde voluptates placeat laborum, tempora quos similique fuga aliquid ea rerum aperiam? Incidunt magnam maxime quisquam repudiandae accusamus animi minus eum. Nemo!</p>
+            </section>
+            <section>
+                <h2>Je joue avec les attributs</h2>
+                <p><a class="lienImg" href="#">Change-moi cette image</a></p>
+                <img class="imageAChanger" src="/cours/JavaScript/img/item-00.png" alt="">
             </section>
         </main>
         <footer>
