--- a/Site CV/blogfolio/blogfolio.html
+++ b/Site CV/blogfolio/blogfolio.html
@@ -13,6 +13,8 @@
 <body>
     <header>
         <a class="retouraccueil" href="/index.html">Retour Accueil</a>
+
+        jumbotron contactez moi
     </header>
     <a href="https://romaneche-thorins.fr/fr/" target="_blank">Mairie de Romanèche-Thorins</a>
     <p>I love cuddles rub against owner because nose is wet yet spill litter box, scratch at owner, destroy all furniture, especially couch and scratch. Human is washing you why halp oh the horror flee scratch hiss bite.</p>  
